--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <!-- <img rel="icon" src="https://img.pngio.com/vaporwave-pc-icon-by-maerk-redbubble-vaporwave-icon-1000_1000.jpg" alt="Vaporwave PC Icon" by maerk | Redbubble"> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -24,7 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <style>@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');</style>
+    <title>CodeDueler</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
