Add slideshow to splash-page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>CodeDueler</title>
+    <script src="https://kit.fontawesome.com/359c646850.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
