Create tour component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="CodeDueler"
+      content="Coding game where two players race to solve challenges"
     />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>CodeDueler</title>
     <script src="https://kit.fontawesome.com/359c646850.js" crossorigin="anonymous"></script>
   </head>
