add OpenGraph locale, title, description, image, and url tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="CodeDueler"
-      content="Coding game where two players race to solve challenges"
-    />
+    <meta property="og:locale" content="en_US">
+    <meta name="description" content="A real-time, colosseum style coding game where players race to solve challenges">
+    <meta property="og:description" content="A real-time, colosseum style coding game where players race to solve challenges">
+    <meta property="og:image" content="%PUBLIC_URL%/codedueler.gif">
+    <meta property="og:title" content="CodeDueler">
+    <meta property="og:url" content="https://codedueler.jorgebarreto.dev">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>CodeDueler</title>
